cross_section upper limit results

--- a/postprocess/fit/cross-section_limit.ipynb
+++ b/postprocess/fit/cross-section_limit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        " 'ZpToHGamma_M3500': 0.1897}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "  3000: 0.6165728092160001}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,18 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.82804292, 0.19652873, 0.18168271])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3803164/3747790849.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcross_section_limit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Observed Limit'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
@@ -148,6 +149,14 @@
     "import mplhep as hep\n",
     "import boost_histogram as bh\n",
     "import numpy as np\n",
+    "\n",
+    "use_helvet = True ## true: use helvetica for plots, make sure the system have the font installed\n",
+    "if use_helvet:\n",
+    "    CMShelvet = hep.style.CMS\n",
+    "    CMShelvet['font.sans-serif'] = ['Helvetica', 'Arial']\n",
+    "    plt.style.use(CMShelvet)\n",
+    "else:\n",
+    "    plt.style.use(hep.style.CMS)\n",
     "\n",
     "def plot_cross_section_limit(cross_section_limit, x_name: str, cuts=None,year='2018', x_min=720, x_max=3500):\n",
     "    LUMI = {\"2016pre\": 19.52, \"2016post\": 16.81, \"2017\": 41.48, \"2018\": 59.83,}\n",
@@ -170,15 +179,18 @@
     "    # mpl.rcParams['axes.prop_cycle'] = cycler(color=['red', 'blue', 'green', 'darkorange', 'cyan', 'HotPink', 'darkviolet', 'SlateGray', 'black', 'LightSkyBlue'])\n",
     "    x = np.array(list(cross_section_limit['Expected Limit'].keys()))\n",
     "    expected_center = np.array(list(cross_section_limit['Expected Limit'].values()))\n",
+    "    ax.scatter(\n",
+    "        x=x, y=np.array(list(cross_section_limit['Observed Limit'].values())), color='black'\n",
+    "    )\n",
     "    ax.errorbar(\n",
     "        x=x, y=expected_center,\n",
     "        yerr=[expected_center-np.array(list(cross_section_limit['Expected -2sigma'].values())), np.array(list(cross_section_limit['Expected +2sigma'].values()))-expected_center],\n",
-    "        label=r'Expected Limit $\\pm 2\\sigma$', linestyle='', linewidth=3, markeredgecolor='', markerfacecolor='black', ecolor='darkorange'\n",
+    "        label=r'Expected Limit $\\pm 2\\sigma$', linestyle='', linewidth=3, marker='o', markeredgecolor='gray', markerfacecolor='gray', ecolor='darkorange'\n",
     "    )\n",
     "    ax.errorbar(\n",
     "        x=x, y=expected_center,\n",
     "        yerr=[expected_center-np.array(list(cross_section_limit['Expected -1sigma'].values())), np.array(list(cross_section_limit['Expected +1sigma'].values()))-expected_center],\n",
-    "        label=r'Expected Limit $\\pm 1\\sigma$', linestyle='', linewidth=3, markeredgecolor='', markerfacecolor='black', ecolor='darkorange'\n",
+    "        label=r'Expected Limit $\\pm 1\\sigma$', linestyle='', linewidth=3, marker='o', markeredgecolor='gray', markerfacecolor='gray', ecolor='green'\n",
     "    )\n",
     "    # or you can specify color='blue' in the above function to cover colorlist (you could comment out colorlist too) \n",
     "\n",
@@ -204,9 +216,9 @@
     "    # plt.text(0.96*ax.get_xlim()[1], ax.get_ylim()[1]*0.72,\"At \"+r\"$\\mathrm{m^{gen}_{H}=}$\"+f\"{Higgsmass} GeV\", fontsize=24, color=\"black\", ha='right')\n",
     "\n",
     "    ## finalizing\n",
-    "    if not os.path.exists(f'./plots/fit/{year}'):\n",
-    "        os.makedirs(f'./plots/fit/{year}')\n",
-    "    plt.savefig(f\"./plots/fit/{year}/cross_section_limit.pdf\", bbox_inches='tight')\n",
+    "    if not os.path.exists(f'../plots/fit/{year}'):\n",
+    "        os.makedirs(f'../plots/fit/{year}')\n",
+    "    plt.savefig(f\"../plots/fit/{year}/cross_section_limit.pdf\", bbox_inches='tight')\n",
     "    plt.show()"
    ]
   },
