--- a/postprocess/test_preselect.ipynb
+++ b/postprocess/test_preselect.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/cvmfs/cms.cern.ch/slc7_amd64_gcc10/external/py3-setuptools/60.9.3-ddcab3b6a742c72fed5554de8ccaaf18/lib/python3.9/site-packages/_distutils_hack/__init__.py:17: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
-      "  warnings.warn(\n",
-      "/cvmfs/cms.cern.ch/slc7_amd64_gcc10/external/py3-setuptools/60.9.3-ddcab3b6a742c72fed5554de8ccaaf18/lib/python3.9/site-packages/_distutils_hack/__init__.py:30: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "/cvmfs/cms.cern.ch/slc7_amd64_gcc10/external/py3-numpy/1.22.4-fed14fba556da687b0d60c63c90ca3bc/lib/python3.9/site-packages/numpy/core/getlimits.py:499: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/cvmfs/cms.cern.ch/slc7_amd64_gcc10/external/py3-numpy/1.22.4-fed14fba556da687b0d60c63c90ca3bc/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n",
-      "/cvmfs/cms.cern.ch/slc7_amd64_gcc10/external/py3-numpy/1.22.4-fed14fba556da687b0d60c63c90ca3bc/lib/python3.9/site-packages/numpy/core/getlimits.py:499: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/cvmfs/cms.cern.ch/slc7_amd64_gcc10/external/py3-numpy/1.22.4-fed14fba556da687b0d60c63c90ca3bc/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import awkward as ak\n",
     "import numpy as np\n",
@@ -57,7 +38,7 @@
     "uproot.open.defaults[\"xrootd_handler\"] = uproot.MultithreadedXRootDSource\n",
     "_events = NanoEventsFactory.from_root(\n",
     "    #file='https://stash.osgconnect.net/+dfu/customizedNanoAOD/output/mc/2018/GJets/GJets_HT-200To400/1397.root',\n",
-    "    file='13.root',\n",
+    "    file='/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root',\n",
     "    treepath='Events', schemaclass=NanoAODSchema\n",
     ").events()\n",
     "p=Processor(outdir='./test/', mode='mc_2017_ZpToHG', param_dir='../src/parameters/')\n",
@@ -68,46 +49,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3.8683870967741933, 6.172903225806452)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ak.mean(p.variables['nExtraAK4jet']), ak.mean(p.variables['nAK4jet'])"
+    "_events = NanoEventsFactory.from_root(\n",
+    "    #file='https://stash.osgconnect.net/+dfu/customizedNanoAOD/output/mc/2018/GJets/GJets_HT-200To400/1397.root',\n",
+    "    file='/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root',\n",
+    "    treepath='Events', schemaclass=NanoAODSchema\n",
+    ").events()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<Array [2, 6, 6, 2, 5, 4, ... 5, 1, 2, 1, 3, 3] type='775 * ?int64'>,\n",
-       " <Array [4, 10, 8, 4, 7, 6, ... 3, 4, 4, 5, 7] type='775 * ?int64'>)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p.variables['nExtraAK4jet'], p.variables['nAK4jet']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +383,7 @@
        " 'subJetIdxG']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
