--- a/postprocess/test_preselect.ipynb
+++ b/postprocess/test_preselect.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pku/fudawei/.local/lib/python3.9/site-packages/coffea/nanoevents/methods/candidate.py:11: FutureWarning: In version 2024.7.0 (target date: 2024-06-30 11:59:59-05:00), this will be an error.\n",
+      "To raise these warnings as errors (and get stack traces to find out where they're called), run\n",
+      "    import warnings\n",
+      "    warnings.filterwarnings(\"error\", module=\"coffea.*\")\n",
+      "after the first `import coffea` or use `@pytest.mark.filterwarnings(\"error:::coffea.*\")` in pytest.\n",
+      "Issue: coffea.nanoevents.methods.vector will be removed and replaced with scikit-hep vector. Nanoevents schemas internal to coffea will be migrated. Otherwise please consider using that package!.\n",
+      "  from coffea.nanoevents.methods import vector\n",
+      "/home/pku/fudawei/.local/lib/python3.9/site-packages/numba/core/cpu.py:99: UserWarning: Numba extension module 'awkward.numba' failed to load due to 'AttributeError(module 'awkward.numba' has no attribute 'register')'.\n",
+      "  numba.core.entrypoints.init_all()\n"
+     ]
+    }
+   ],
    "source": [
     "import awkward as ak\n",
     "import numpy as np\n",
@@ -38,24 +54,121 @@
     "uproot.open.defaults[\"xrootd_handler\"] = uproot.MultithreadedXRootDSource\n",
     "_events = NanoEventsFactory.from_root(\n",
     "    #file='https://stash.osgconnect.net/+dfu/customizedNanoAOD/output/mc/2018/GJets/GJets_HT-200To400/1397.root',\n",
-    "    file='/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root',\n",
-    "    treepath='Events', schemaclass=NanoAODSchema\n",
+    "    {'/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root': 'Events'},\n",
+    "    schemaclass=NanoAODSchema, delayed=False,\n",
     ").events()\n",
-    "p=Processor(outdir='./test/', mode='mc_2017_ZpToHG', param_dir='../src/parameters/')\n",
+    "p=Processor(outdir='./test/', mode='mc_2017_GJets', param_dir='../src/parameters/')\n",
     "c=p.process(_events)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(711, 1, 6980936)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.event[0].luminosityBlock, p.event[0].run, p.event[0].event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>[[1.27, 1.09, 0.941, 1.17, 1, 0.867, 1.08, 0.927, 0.804],\n",
+       " [1.2, 1.09, 0.997, 1.1, 1, 0.914, 1.02, 0.924, 0.845],\n",
+       " [1.07, 1, 0.934, 1.07, 1, 0.934, 1.07, 1, 0.934],\n",
+       " [1.3, 1.19, 1.09, 1.09, 1, 0.92, 0.934, 0.855, 0.786],\n",
+       " [1.19, 1.09, 0.993, 1.1, 1, 0.914, 1.02, 0.927, 0.848],\n",
+       " [1.22, 1.09, 0.979, 1.12, 1, 0.899, 1.04, 0.925, 0.832],\n",
+       " [1.22, 1.09, 0.977, 1.12, 1, 0.897, 1.04, 0.925, 0.829],\n",
+       " [1.24, 1.08, 0.949, 1.15, 1, 0.88, 1.07, 0.932, 0.821],\n",
+       " [1.2, 1.09, 0.991, 1.1, 1, 0.912, 1.02, 0.926, 0.845],\n",
+       " [1.3, 1.17, 1.07, 1.11, 1, 0.908, 0.955, 0.862, 0.783],\n",
+       " ...,\n",
+       " [1.21, 1.1, 1, 1.1, 1, 0.915, 1.01, 0.919, 0.841],\n",
+       " [1.22, 1.09, 0.988, 1.11, 1, 0.905, 1.03, 0.923, 0.835],\n",
+       " [1.17, 1.09, 1.02, 1.07, 1, 0.938, 0.987, 0.923, 0.866],\n",
+       " [1.3, 1.17, 1.07, 1.11, 1, 0.908, 0.956, 0.863, 0.783],\n",
+       " [1.28, 1.19, 1.11, 1.08, 1, 0.932, 0.918, 0.853, 0.796],\n",
+       " [1.18, 1.09, 1.02, 1.08, 1, 0.929, 0.997, 0.922, 0.856],\n",
+       " [1.17, 1.09, 1.01, 1.08, 1, 0.93, 0.993, 0.923, 0.858],\n",
+       " [1.21, 1.09, 0.983, 1.11, 1, 0.904, 1.03, 0.926, 0.837],\n",
+       " [1.3, 1.19, 1.09, 1.09, 1, 0.918, 0.932, 0.853, 0.784]]\n",
+       "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+       "type: 543 * option[[var * float32[parameters={&quot;__doc__&quot;: &quot;LHE scale variation weights (w_var / w_nominal); [0] is MUF=\\&quot;0.5\\&quot; MUR=\\&quot;0.5\\&quot;; [1] is MUF=\\&quot;1.0\\&quot; MUR=\\&quot;0.5\\&quot;; [2] is MUF=\\&quot;2.0\\&quot; MUR=\\&quot;0.5\\&quot;; [3] is MUF=\\&quot;0.5\\&quot; MUR=\\&quot;1.0\\&quot;; [4] is MUF=\\&quot;1.0\\&quot; MUR=\\&quot;1.0\\&quot;; [5] is MUF=\\&quot;2.0\\&quot; MUR=\\&quot;1.0\\&quot;; [6] is MUF=\\&quot;0.5\\&quot; MUR=\\&quot;2.0\\&quot;; [7] is MUF=\\&quot;1.0\\&quot; MUR=\\&quot;2.0\\&quot;; [8] is MUF=\\&quot;2.0\\&quot; MUR=\\&quot;2.0\\&quot;&quot;}], parameters={&quot;__array__&quot;: &quot;NanoCollection&quot;, &quot;collection_name&quot;: &quot;LHEScaleWeight&quot;}]]</pre>"
+      ],
+      "text/plain": [
+       "<Array [[1.27, 1.09, ..., 0.927, 0.804], ...] type='543 * option[[var * flo...'>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.variables['event_LHEScaleWeight']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Specification of treename by argument to from_root is no longer supported in coffea 2023.\n            Please use one of the allowed types for \"files\" specified by uproot: https://github.com/scikit-hep/uproot5/blob/v5.1.2/src/uproot/_dask.py#L109-L132\n            ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m _events \u001b[38;5;241m=\u001b[39m \u001b[43mNanoEventsFactory\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_root\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m#file='https://stash.osgconnect.net/+dfu/customizedNanoAOD/output/mc/2018/GJets/GJets_HT-200To400/1397.root',\u001b[39;49;00m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfile\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtreepath\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEvents\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mschemaclass\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mNanoAODSchema\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mevents()\n",
+      "File \u001b[0;32m~/.local/lib/python3.9/site-packages/coffea/nanoevents/factory.py:264\u001b[0m, in \u001b[0;36mNanoEventsFactory.from_root\u001b[0;34m(cls, file, treepath, entry_start, entry_stop, steps_per_file, runtime_cache, persistent_cache, schemaclass, metadata, uproot_options, access_log, iteritems_options, use_ak_forth, delayed, known_base_form)\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Quickly build NanoEvents from a root file\u001b[39;00m\n\u001b[1;32m    224\u001b[0m \n\u001b[1;32m    225\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    258\u001b[0m \u001b[38;5;124;03m        If the base form of the input file is known ahead of time we can skip opening a single file and parsing metadata.\u001b[39;00m\n\u001b[1;32m    259\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    261\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m treepath \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m uproot\u001b[38;5;241m.\u001b[39m_util\u001b[38;5;241m.\u001b[39munset \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\n\u001b[1;32m    262\u001b[0m     file, uproot\u001b[38;5;241m.\u001b[39mreading\u001b[38;5;241m.\u001b[39mReadOnlyDirectory\n\u001b[1;32m    263\u001b[0m ):\n\u001b[0;32m--> 264\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    265\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"Specification of treename by argument to from_root is no longer supported in coffea 2023.\u001b[39;00m\n\u001b[1;32m    266\u001b[0m \u001b[38;5;124;03m    Please use one of the allowed types for \"files\" specified by uproot: https://github.com/scikit-hep/uproot5/blob/v5.1.2/src/uproot/_dask.py#L109-L132\u001b[39;00m\n\u001b[1;32m    267\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    268\u001b[0m     )\n\u001b[1;32m    270\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m delayed \u001b[38;5;129;01mand\u001b[39;00m steps_per_file \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m uproot\u001b[38;5;241m.\u001b[39m_util\u001b[38;5;241m.\u001b[39munset:\n\u001b[1;32m    271\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[1;32m    272\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mYou have set steps_per_file to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msteps_per_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, this should only be used for a\u001b[39m\n\u001b[1;32m    273\u001b[0m \u001b[38;5;124m        small number of inputs (e.g. for early-stage/exploratory analysis) since it does not\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;167;01mRuntimeWarning\u001b[39;00m,\n\u001b[1;32m    280\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Specification of treename by argument to from_root is no longer supported in coffea 2023.\n            Please use one of the allowed types for \"files\" specified by uproot: https://github.com/scikit-hep/uproot5/blob/v5.1.2/src/uproot/_dask.py#L109-L132\n            "
+     ]
+    }
+   ],
    "source": [
     "_events = NanoEventsFactory.from_root(\n",
     "    #file='https://stash.osgconnect.net/+dfu/customizedNanoAOD/output/mc/2018/GJets/GJets_HT-200To400/1397.root',\n",
     "    file='/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root',\n",
     "    treepath='Events', schemaclass=NanoAODSchema\n",
     ").events()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Array [1.05, 1, 0.95, 1.05, ... 1.05, 1, 0.95] type='9 * float32[parameters={\"_...'>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_events.LHEScaleWeight[0]"
    ]
   },
   {
@@ -1148,7 +1261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
