--- a/postprocess/test_preselect.ipynb
+++ b/postprocess/test_preselect.ipynb
@@ -51,101 +51,92 @@
    "source": [
     "uproot.open.defaults[\"xrootd_handler\"] = uproot.MultithreadedXRootDSource\n",
     "_events = NanoEventsFactory.from_root(\n",
-    "    #file='https://stash.osgconnect.net/+dfu/customizedNanoAOD/output/mc/2018/GJets/GJets_HT-200To400/1397.root',\n",
-    "    {'/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root': 'Events'},\n",
+    "    {'/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/TTJets/TTJets/1242.root': 'Events'},\n",
     "    schemaclass=NanoAODSchema, delayed=False,\n",
     ").events()\n",
-    "p=Processor(outdir='./test/', mode='mc_2017_GJets', param_dir='../src/parameters/')\n",
-    "#c=p.process(_events)\n"
+    "p=Processor(outdir='./test/', mode='mc_2017_TTJets', param_dir='../src/parameters/')\n",
+    "c=p.process(_events)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_AK8jet = _events.FatJet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "QCD_score = ak.sum([raw_AK8jet[f] for f in raw_AK8jet.fields if f.startswith('ParticleNetraw_probQCD')], axis=0, mask_identity=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pku/fudawei/anaconda3/lib/python3.9/site-packages/awkward/_nplikes/array_module.py:271: RuntimeWarning: invalid value encountered in divide\n",
-      "  return impl(*non_generic_value_promoted_args, **(kwargs or {}))\n"
+      "nAK4jet 1\n",
+      "AK8jet_eta 1\n",
+      "AK8jet_mass 1\n",
+      "AK8jet_pt 1\n",
+      "AK8jet_msoftdrop 1\n",
+      "AK8jet_phi 1\n",
+      "event_MET_pt 1\n",
+      "event_MET_phi 1\n",
+      "event_LHEScaleWeight 1\n",
+      "event_genWeight 1\n",
+      "event_weight 1\n",
+      "R_eta 1\n",
+      "R_mass 1\n",
+      "R_phi 1\n",
+      "R_pt 1\n",
+      "gKK_eta 1\n",
+      "gKK_mass 1\n",
+      "gKK_phi 1\n",
+      "gKK_pt 1\n",
+      "AK8jet_ParticleNetMDraw_probQCDb 1\n",
+      "AK8jet_ParticleNetMDraw_probQCDbb 1\n",
+      "AK8jet_ParticleNetMDraw_probQCDc 1\n",
+      "AK8jet_ParticleNetMDraw_probQCDcc 1\n",
+      "AK8jet_ParticleNetMDraw_probQCDothers 1\n",
+      "AK8jet_ParticleNetMDraw_probXbb 1\n",
+      "AK8jet_ParticleNetMDraw_probXcc 1\n",
+      "AK8jet_ParticleNetMDraw_probXqq 1\n",
+      "AK8jet_ParticleNetraw_probHbb 1\n",
+      "AK8jet_ParticleNetraw_probHcc 1\n",
+      "AK8jet_ParticleNetraw_probHqqqq 1\n",
+      "AK8jet_ParticleNetraw_probQCDb 1\n",
+      "AK8jet_ParticleNetraw_probQCDbb 1\n",
+      "AK8jet_ParticleNetraw_probQCDc 1\n",
+      "AK8jet_ParticleNetraw_probQCDcc 1\n",
+      "AK8jet_ParticleNetraw_probQCDothers 1\n",
+      "AK8jet_ParticleNetraw_probTbc 1\n",
+      "AK8jet_ParticleNetraw_probTbcq 1\n",
+      "AK8jet_ParticleNetraw_probTbel 1\n",
+      "AK8jet_ParticleNetraw_probTbmu 1\n",
+      "AK8jet_ParticleNetraw_probTbq 1\n",
+      "AK8jet_ParticleNetraw_probTbqq 1\n",
+      "AK8jet_ParticleNetraw_probTbta 1\n",
+      "AK8jet_ParticleNetraw_probWcq 1\n",
+      "AK8jet_ParticleNetraw_probWqq 1\n",
+      "AK8jet_ParticleNetraw_probZbb 1\n",
+      "AK8jet_ParticleNetraw_probZcc 1\n",
+      "AK8jet_ParticleNetraw_probZqq 1\n",
+      "AK8jet_particleNetMD_QCD 1\n",
+      "AK8jet_particleNetMD_Xbb 1\n",
+      "AK8jet_particleNetMD_Xcc 1\n",
+      "AK8jet_particleNetMD_Xqq 1\n",
+      "AK8jet_particleNet_H4qvsQCD 1\n",
+      "AK8jet_particleNet_HbbvsQCD 1\n",
+      "AK8jet_particleNet_HccvsQCD 1\n",
+      "AK8jet_particleNet_QCD 1\n",
+      "AK8jet_particleNet_TvsQCD 1\n",
+      "AK8jet_particleNet_WvsQCD 1\n",
+      "AK8jet_particleNet_ZvsQCD 1\n",
+      "AK8jet_Wqq_score 84150\n",
+      "event_No. 1\n",
+      "m_85 1\n",
+      "m_90 1\n",
+      "nMuon 1\n",
+      "nElectron 1\n"
      ]
     }
    ],
    "source": [
-    "Wqq_score = raw_AK8jet['ParticleNetraw_probWqq'] / (raw_AK8jet['ParticleNetraw_probWqq'] + QCD_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Wqq_score=Wqq_score[ak.num(Wqq_score, axis=1)>2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>[[0, 2, 1],\n",
-       " [2, 1, 0],\n",
-       " [1, 2, 0],\n",
-       " [1, 2, 0],\n",
-       " [2, 0, 1],\n",
-       " [1, 0, 2],\n",
-       " [3, 2, 0, 1],\n",
-       " [0, 1, 2],\n",
-       " [1, 2, 0],\n",
-       " [0, 3, 2, 1],\n",
-       " ...,\n",
-       " [0, 1, 2],\n",
-       " [0, 2, 1],\n",
-       " [2, 1, 0],\n",
-       " [2, 1, 0],\n",
-       " [2, 1, 0],\n",
-       " [1, 2, 0],\n",
-       " [0, 2, 1],\n",
-       " [2, 1, 0],\n",
-       " [1, 0, 2]]\n",
-       "------------------------\n",
-       "type: 7501 * var * int64</pre>"
-      ],
-      "text/plain": [
-       "<Array [[0, 2, 1], [2, 1, 0], ..., [...], [1, 0, 2]] type='7501 * var * int64'>"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ak.argsort(Wqq_score, axis=1, ascending=False)"
+    "for f in p.variables:\n",
+    "    print(f, len(p.variables[f]))"
    ]
   },
   {
@@ -575,56 +566,6 @@
     {
      "data": {
       "text/plain": [
-       "{-4332,\n",
-       " -4232,\n",
-       " -4132,\n",
-       " -4122,\n",
-       " -431,\n",
-       " -421,\n",
-       " -411,\n",
-       " -321,\n",
-       " -311,\n",
-       " -211,\n",
-       " -14,\n",
-       " -13,\n",
-       " -12,\n",
-       " -11,\n",
-       " 11,\n",
-       " 12,\n",
-       " 13,\n",
-       " 14,\n",
-       " 21,\n",
-       " 22,\n",
-       " 211,\n",
-       " 321,\n",
-       " 323,\n",
-       " 411,\n",
-       " 421,\n",
-       " 431,\n",
-       " 441,\n",
-       " 443,\n",
-       " 4122,\n",
-       " 4232,\n",
-       " 4332}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(ak.flatten(_events.GenPart[_events.Photon.genPartIdx].pdgId))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "{-11, 11, 22}"
       ]
      },
@@ -635,112 +576,6 @@
    ],
    "source": [
     "set(ak.flatten(_events.GenPart[_events.Photon.genPartIdx[_events.Photon.genPartIdx!=-1]].pdgId))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GenParticle"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_events.GenPart[0][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=ak.from_parquet('./test/22737784-5359-11ed-a3a4-0245010abeef_Events_0-37337.parq')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Array [0] type='1 * ?int64'>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.AK8jet_rankToHiggsMass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (726123375.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/dfu/ipykernel_23308/726123375.py\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    processor_instance = Processor(mode='data_2017_SinglePhoton', outdir='./test/', param_dir='../src/parameters/'),\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "run = processor.Runner(\n",
-    "    executor = processor.FuturesExecutor(compression=None, workers=1),\n",
-    "    schema = NanoAODSchema,\n",
-    "    savemetrics = True,\n",
-    "    xrootdtimeout = 60 * 30,\n",
-    "    #chunksize = 100_000,\n",
-    "    #maxchunks = 1,\n",
-    ")\n",
-    "stats, metrics = run(\n",
-    "    fileset = {'input': ['root://cms-xrd-global.cern.ch//store/data/Run2017B/SinglePhoton/NANOAOD/UL2017_MiniAODv2_NanoAODv9-v1/120000/4DEB63D4-999D-7946-AF29-BB04A0CBC247.root']},\n",
-    "    treename = 'Events',\n",
-    "    processor_instance = Processor(mode='data_2017_SinglePhoton', outdir='./test/', param_dir='../src/parameters/'),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data_2017_SinglePhoton': {'n_events': 10026.0,\n",
-       "  'triggered': 1127.0,\n",
-       "  'filtered': 1079.0,\n",
-       "  'photon': 104.0,\n",
-       "  'AK8jet': 24.0,\n",
-       "  '2018_HEM_correction': 24.0,\n",
-       "  'photon-jet_cleaning': 16.0,\n",
-       "  'b-veto': 13.0}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats"
    ]
   },
   {
