--- a/postprocess/test_preselect.ipynb
+++ b/postprocess/test_preselect.ipynb
@@ -54,8 +54,52 @@
     "    {'/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/TTJets/TTJets/1242.root': 'Events'},\n",
     "    schemaclass=NanoAODSchema, delayed=False,\n",
     ").events()\n",
-    "p=Processor(outdir='./test/', mode='mc_2017_TTJets', param_dir='../src/parameters/')\n",
-    "c=p.process(_events)\n"
+    "#p=Processor(outdir='./test/', mode='mc_2017_TTJets', param_dir='../src/parameters/')\n",
+    "#c=p.process(_events)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>[[0.637, 0.735, 0.823, 0.436, 1, 0.557, 0.31, 0.354, 0.393],\n",
+       " [0.0632, 0.0912, 0.115, 0.513, 1, 0.486, 0.746, 0.71, 0.676],\n",
+       " [0.235, 0.231, 0.224, 0.493, 1, 0.503, 0.619, 0.632, 0.64],\n",
+       " [0.818, 0.765, 0.714, 0.535, 1, 0.467, 0.365, 0.341, 0.318],\n",
+       " [0.754, 0.742, 0.73, 0.508, 1, 0.492, 0.357, 0.351, 0.344],\n",
+       " [0.858, 0.797, 0.742, 0.539, 1, 0.466, 0.355, 0.33, 0.307],\n",
+       " [0.49, 0.492, 0.492, 0.496, 1, 0.501, 0.481, 0.485, 0.487],\n",
+       " [0.526, 0.615, 0.696, 0.436, 1, 0.558, 0.367, 0.415, 0.457],\n",
+       " [0.625, 0.612, 0.581, 0.511, 1, 0.474, 0.406, 0.397, 0.376],\n",
+       " [0.937, 0.841, 0.757, 0.557, 1, 0.45, 0.349, 0.313, 0.282],\n",
+       " ...,\n",
+       " [0.805, 0.742, 0.685, 0.543, 1, 0.462, 0.38, 0.35, 0.323],\n",
+       " [0.832, 0.744, 0.669, 0.559, 1, 0.45, 0.39, 0.349, 0.314],\n",
+       " [0.975, 0.869, 0.777, 0.561, 1, 0.447, 0.342, 0.305, 0.272],\n",
+       " [0.594, 0.587, 0.577, 0.506, 1, 0.491, 0.426, 0.421, 0.413],\n",
+       " [1.21, 0.674, 0.251, 0.83, 1, 0.237, 0.589, 0.375, 0.204],\n",
+       " [0.958, 0.806, 0.688, 0.594, 1, 0.426, 0.385, 0.324, 0.276],\n",
+       " [0.743, 0.708, 0.674, 0.525, 1, 0.476, 0.384, 0.366, 0.348],\n",
+       " [0.94, 0.826, 0.731, 0.569, 1, 0.442, 0.361, 0.317, 0.281],\n",
+       " [0.583, 0.653, 0.716, 0.448, 1, 0.546, 0.354, 0.393, 0.428]]\n",
+       "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+       "type: 84150 * [var * float32[parameters={&quot;__doc__&quot;: &quot;LHE scale variation weights (w_var / w_nominal); [0] is MUF=\\&quot;0.5\\&quot; MUR=\\&quot;0.5\\&quot;; [1] is MUF=\\&quot;1.0\\&quot; MUR=\\&quot;0.5\\&quot;; [2] is MUF=\\&quot;2.0\\&quot; MUR=\\&quot;0.5\\&quot;; [3] is MUF=\\&quot;0.5\\&quot; MUR=\\&quot;1.0\\&quot;; [4] is MUF=\\&quot;1.0\\&quot; MUR=\\&quot;1.0\\&quot;; [5] is MUF=\\&quot;2.0\\&quot; MUR=\\&quot;1.0\\&quot;; [6] is MUF=\\&quot;0.5\\&quot; MUR=\\&quot;2.0\\&quot;; [7] is MUF=\\&quot;1.0\\&quot; MUR=\\&quot;2.0\\&quot;; [8] is MUF=\\&quot;2.0\\&quot; MUR=\\&quot;2.0\\&quot;&quot;}], parameters={&quot;__array__&quot;: &quot;NanoCollection&quot;, &quot;collection_name&quot;: &quot;LHEScaleWeight&quot;}]</pre>"
+      ],
+      "text/plain": [
+       "<Array [[0.637, 0.735, ..., 0.354, 0.393], ...] type='84150 * [var * float3...'>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_events.LHEScaleWeight"
    ]
   },
   {
