Zbb+gamma x-sec=1pb

--- a/postprocess/Analyze.ipynb
+++ b/postprocess/Analyze.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "        r'Non-prompt $\\gamma$': [i for channel in ['ST', 'TTJets', 'ZJetsToNuNu', 'ZJetsToLL', 'ZJetsToQQ', 'WJetsToLNu', 'WJetsToQQ', 'QCD']  for i in glob(f'{base}/mc/{year}/{channel}/*')],\n",
     "        r'QCD+$\\gamma$': [i for channel in ['GJets'] for i in glob(f'{base}/mc/{year}/{channel}/*')],\n",
     "        'data': [i for channel in [\"EGamma\" if year==\"2018\" else \"SinglePhoton\"] for i in glob(f'{base}/data/{year}/{channel}/*')],\n",
-    "    } for year in ['2016post', '2017', '2018']\n",
+    "    } for year in ['2016pre', '2016post', '2017', '2018']\n",
     "}\n",
     "\n",
     "BKG = set([k for k in filepath['2018'].keys()]) - set(['data'])\n",
