--- a/postprocess/test_preselect.ipynb
+++ b/postprocess/test_preselect.ipynb
@@ -235,14 +235,14 @@
    "source": [
     "uproot.open.defaults[\"xrootd_handler\"] = uproot.MultithreadedXRootDSource\n",
     "_events = NanoEventsFactory.from_root(\n",
-    "    #{'/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/GJets/GJets_HT-600ToInf/209.root': 'Events'},\n",
-    "    {'~/custom_nano.root': 'Events'},\n",
+    "    {'~/GluGlu.root': 'Events'},\n",
+    "    #{'~/custom_nano.root': 'Events'},\n",
     "    #{'/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/TTJets/TTJets/2339.root': 'Events'},\n",
     "    #{'/data/bond/fudawei/public/customizedNanoAOD/output/mc/2017/ZpToHG/ZpToHGamma_M1000/14.root': 'Events'},\n",
     "    schemaclass=NanoAODSchema, delayed=False,\n",
     ").events()\n",
-    "p=Processor(outdir='./test/', mode='mc_2018_ZpToHG', param_dir='../src/parameters/')\n",
-    "c=p.process(_events)"
+    "#p=Processor(outdir='./test/', mode='mc_2018_ZpToHG', param_dir='../src/parameters/')\n",
+    "#c=p.process(_events)"
    ]
   },
   {
