--- a/postprocess/systematics.ipynb
+++ b/postprocess/systematics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5b5bda24-1b72-4f26-aa8b-f97c1c9e426f",
    "metadata": {},
    "outputs": [],
@@ -3867,7 +3867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8b957a8e",
    "metadata": {},
    "outputs": [],
@@ -3878,7 +3878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "601242f9",
    "metadata": {},
    "outputs": [],
@@ -3900,13 +3900,15 @@
     "        if l.startswith('Xbb_tagger'):\n",
     "            lines[i] = f\"Xbb_tagger_{SR}\\t\\tlnN\\t{systematics['Xbb_tagger'][SR][m]}\\t-\"\n",
     "        if l.startswith('PDF'):\n",
-    "            lines[i] = f\"PDF\\t\\tlnN\\t{systematics['PDF'][SR][m]}\\t-\"\n",
-    "            if '_' in str(mass):\n",
+    "            if jet=='Z':\n",
     "                lines[i] = ''\n",
+    "            else:\n",
+    "                lines[i] = f\"PDF\\t\\tlnN\\t{systematics['PDF'][SR][m]}\\t-\"\n",
     "        if l.startswith('QCD_scale'):\n",
-    "            lines[i] = f\"QCD_scale\\t\\tlnN\\t{systematics['QCD_scale'][SR][m]}\\t-\"\n",
-    "            if '_' in str(mass):\n",
+    "            if jet=='Z':\n",
     "                lines[i] = ''\n",
+    "            else:\n",
+    "                lines[i] = f\"QCD_scale\\t\\tlnN\\t{systematics['QCD_scale'][SR][m]}\\t-\"\n",
     "        if l.startswith('JES'):\n",
     "            lines[i] = f\"JES_{SR}\\t\\tparam\\t0.0\\t1.0\"\n",
     "        if l.startswith('JER'):\n",
@@ -3921,7 +3923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d578f41f",
    "metadata": {},
    "outputs": [],
