--- a/fit/fit.ipynb
+++ b/fit/fit.ipynb
@@ -9,9 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pku/fudawei/anaconda3/lib/python3.12/site-packages/coffea/nanoevents/schemas/fcc.py:5: FutureWarning: In version 2025.1.0 (target date: 2024-12-31 11:59:59-06:00), this will be an error.\n",
+      "To raise these warnings as errors (and get stack traces to find out where they're called), run\n",
+      "    import warnings\n",
+      "    warnings.filterwarnings(\"error\", module=\"coffea.*\")\n",
+      "after the first `import coffea` or use `@pytest.mark.filterwarnings(\"error:::coffea.*\")` in pytest.\n",
+      "Issue: coffea.nanoevents.methods.vector will be removed and replaced with scikit-hep vector. Nanoevents schemas internal to coffea will be migrated. Otherwise please consider using that package!.\n",
+      "  from coffea.nanoevents.methods import vector\n"
+     ]
+    }
+   ],
    "source": [
     "import os, yaml, random, uproot, json, correctionlib\n",
     "import numpy as np\n",
@@ -28,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,30 +723,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_323642/1297302582.py:27: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_331242/1297302582.py:27: RuntimeWarning: invalid value encountered in divide\n",
       "  number = np.nan_to_num(h**2/var, nan=0)\n",
-      "/tmp/ipykernel_323642/1297302582.py:44: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_331242/1297302582.py:44: RuntimeWarning: invalid value encountered in divide\n",
       "  up_error_bar *= np.nan_to_num(var/h, nan=1)\n",
-      "/tmp/ipykernel_323642/1297302582.py:45: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_331242/1297302582.py:45: RuntimeWarning: invalid value encountered in divide\n",
       "  down_error_bar *= np.nan_to_num(var/h, nan=1)\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n"
      ]
     },
@@ -750,23 +764,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_323642/1297302582.py:27: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_331242/1297302582.py:27: RuntimeWarning: invalid value encountered in divide\n",
       "  number = np.nan_to_num(h**2/var, nan=0)\n",
-      "/tmp/ipykernel_323642/1297302582.py:44: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_331242/1297302582.py:44: RuntimeWarning: invalid value encountered in divide\n",
       "  up_error_bar *= np.nan_to_num(var/h, nan=1)\n",
-      "/tmp/ipykernel_323642/1297302582.py:45: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_331242/1297302582.py:45: RuntimeWarning: invalid value encountered in divide\n",
       "  down_error_bar *= np.nan_to_num(var/h, nan=1)\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n",
-      "/tmp/ipykernel_323642/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_331242/3269729045.py:85: RuntimeWarning: divide by zero encountered in divide\n",
       "  ratio = fit/h_cut\n"
      ]
     },
