--- a/postprocess/Analyze.ipynb
+++ b/postprocess/Analyze.ipynb
@@ -130,9 +130,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gjets_nlo_kfactor_ewk',\n",
+       " 'gjets_nlo_kfactor_qcd',\n",
+       " 'wjets_nlo_kfactor_ewk',\n",
+       " 'wjets_nlo_kfactor_qcd',\n",
+       " 'zjets_nlo_kfactor_ewk',\n",
+       " 'zjets_nlo_kfactor_qcd']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nlo = correctionlib.CorrectionSet.from_file('src/parameters/nlo_kfactor.json')\n",
     "list(nlo.keys())"
@@ -147,14 +163,14 @@
     "weight = {y: {} for y in events}\n",
     "for y in events:\n",
     "    for c in events[y]:\n",
-    "        #if c == r'QCD+$\\gamma$':\n",
-    "        #    weight[y][c] = events[y][c].event_final_weight * nlo['gjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
-    "        #elif c == r'W+$\\gamma$':\n",
-    "        #    weight[y][c] = events[y][c].event_final_weight * nlo['wjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
-    "        #elif c == r'Z+$\\gamma$':\n",
-    "        #    weight[y][c] = events[y][c].event_final_weight * nlo['zjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
-    "        #else:\n",
-    "        weight[y][c] = events[y][c].event_final_weight"
+    "        if c == r'QCD+$\\gamma$':\n",
+    "            weight[y][c] = events[y][c].event_final_weight * nlo['gjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
+    "        elif c == r'W+$\\gamma$':\n",
+    "            weight[y][c] = events[y][c].event_final_weight * nlo['wjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
+    "        elif c == r'Z+$\\gamma$':\n",
+    "            weight[y][c] = events[y][c].event_final_weight * nlo['zjets_nlo_kfactor_qcd'].evaluate(events[y][c]['AK8jet_pt'])\n",
+    "        else:\n",
+    "            weight[y][c] = events[y][c].event_final_weight"
    ]
   },
   {
@@ -180,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2638,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2683,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2721,7 +2737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
