--- a/postprocess/systematics.ipynb
+++ b/postprocess/systematics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5b5bda24-1b72-4f26-aa8b-f97c1c9e426f",
    "metadata": {},
    "outputs": [],
@@ -3873,7 +3873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "8b957a8e",
    "metadata": {},
    "outputs": [],
@@ -3884,7 +3884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "601242f9",
    "metadata": {},
    "outputs": [],
@@ -3919,9 +3919,9 @@
     "            lines[i] = f\"JES_{SR}\\t\\tparam\\t0.0\\t1.0\"\n",
     "        if l.startswith('JER'):\n",
     "            lines[i] = f\"JER_{SR}\\t\\tparam\\t0.0\\t1.0\"\n",
-    "        if l.startswith('Br_Hbb'):\n",
+    "        if l.startswith('BR_Hbb'):\n",
     "            if jet=='Z':\n",
-    "                lines[i] = f'Brr_Zbb\\t\\tlnN\\t{systematics['Br_Zbb']}\\t-'\n",
+    "                lines[i] = f'BR_Zbb\\t\\tlnN\\t{systematics['Br_Zbb']}\\t-'\n",
     "    \n",
     "    new_datacard = '\\n'.join(lines).replace('Hbb', f'{jet}bb').replace('SR1', SR).replace('CR1', SR.replace('S', 'C')).replace('1000', str(mass))\n",
     "    if not os.path.exists(f'fit/datacard/{mass}'):\n",
@@ -3932,7 +3932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "d578f41f",
    "metadata": {},
    "outputs": [],
