--- a/postprocess/Analyze.ipynb
+++ b/postprocess/Analyze.ipynb
@@ -189,6 +189,7 @@
     "import mplhep as hep\n",
     "import boost_histogram as bh\n",
     "from cycler import cycler\n",
+    "from matplotlib.cm import get_cmap\n",
     "\n",
     "use_helvet = False ## true: use helvetica for plots, make sure the system have the font installed\n",
     "if use_helvet:\n",
@@ -197,6 +198,7 @@
     "    plt.style.use(CMShelvet)\n",
     "else:\n",
     "    plt.style.use(hep.style.CMS)\n",
+    "mpl.rcParams['axes.prop_cycle'] = cycler(color=get_cmap(\"tab10\").colors)\n",
     "\n",
     "def flow(hist: bh.Histogram, overflow: bool=True, underflow: bool=False):\n",
     "    h, var = hist.view(flow=(overflow | underflow)).value, hist.view(flow=(overflow | underflow)).variance\n",
